decreases opacity of search modal. fixes overflow of height issue with app container

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,6 +2,7 @@
   text-align: center;
   background: #c54c3c;
   height: 100%;
+  overflow: auto;
 }
 
 .menu {
