--- a/src/components/SearchModal/SearchModal.scss
+++ b/src/components/SearchModal/SearchModal.scss
@@ -7,6 +7,7 @@
     top: 0;
     left: 0;
     flex-flow: column wrap;
+    opacity: 0.9;
     .close {
         display: block;
         width: 50px;
